--- a/src/assets/project-files/projects.json
+++ b/src/assets/project-files/projects.json
@@ -306,15 +306,15 @@
       {
         "id": "m1",
         "name": "Going on a Walk",
-        "link": "https://www.youtube.com/embed/W40REQBKK3g?si=mMOB-OmJQxJ5Iyf4",
-        "description": "This is the video of me walking to a nearby church. Reach: 439 | Impressions: 485",
+        "link": "https://www.youtube.com/embed/ELCl6KONt64?si=d3boieUY1oqGEXLW",
+        "description": "Reach: 439 | Impressions: 485",
         "type": "Social"
       },
       {
         "id": "m2",
         "name": "Upgrade Your Shoes",
-        "link": "https://www.youtube.com/embed/W40REQBKK3g?si=mMOB-OmJQxJ5Iyf4",
-        "description": "This is the video of me kicking the camera. Links Clicked: 142 | Click Through Rate: 8.81% | Reach: 1,449 | Impressions: 1,844",
+        "link": "https://www.youtube.com/embed/2BBrw7OgRFo?si=g0osNo2ALTJo3GRn",
+        "description": "Links Clicked: 142 | Click Through Rate: 8.81% | Reach: 1,449 | Impressions: 1,844",
         "type": "Social"
       },
       {
@@ -333,7 +333,7 @@
       },
       {
         "id": "m5",
-        "name": "Road Bum Newsletter",
+        "name": "Road Bum Newsletter Email",
         "link": null,
         "description": null,
         "type": "Email"
