--- a/src/assets/project-files/projects.json
+++ b/src/assets/project-files/projects.json
@@ -165,7 +165,7 @@
 
       {
         "id": "ph2",
-        "name": "Excursion 1/1 – Creative",
+        "name": "Excursion 1 – Creative",
         "description": "This past weekend, we went on a trip to Island Park, ID. There, we took many different pictures. The ones below are more on the creative side. All of these pictures were taken at the same place, all on February 3rd, but all throughout the day. My personal favorites from these are the ones of the fishing equipment and the truck. These pictures were taken using a technique called Light Painting. I set the camera up on a tripod and set it to a long exposure, the turned off all of the lights. I then used a flashlight to paint the parts I wanted to have visible. It truly is a fun technique and it is hard to go wrong!",
         "photos": [
           {
@@ -193,7 +193,7 @@
 
       {
         "id": "ph3",
-        "name": "Excursion 2/2 – Portraits",
+        "name": "Excursion 2 – Portraits",
         "description": "While in Island Park, I had the chance to photograph some wonderful models. These pictures were so fun to take! I had a blast with these models and here are some of my favorite pictures of them! I also got to experiment with using flashes.",
         "photos": [
           {
@@ -289,7 +289,7 @@
             "description": "Man smiling by river"
           },
           {
-            "image": "blank.png",
+            "image": "temple.jpg",
             "description": "LDS Rexburg Temple"
           },
           {
