--- a/src/assets/project-files/projects.json
+++ b/src/assets/project-files/projects.json
@@ -344,6 +344,13 @@
         "link": null,
         "description": null,
         "type": "Email"
+      },
+      {
+        "id": "m7",
+        "name": "Marketing Binder Epoxy Flooring",
+        "link": null,
+        "description": null,
+        "type": "Email"
       }
     ]
   }
