--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "jamidownsportfolio",
   "homepage": "https://mdowns1999.github.io/jami-downs-portfolio",
   "private": true,
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@eslint/js": "^9.39.1",
     "framer-motion": "^12.23.25",
+    "globals": "^16.5.0",
     "hamburger-react": "^2.5.2",
     "prop-types": "^15.8.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-router-dom": "^7.10.0",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
